tests/httproute/backendrefs/weights/2-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cafe-route
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /all-valid
      headers:
      - name: version 
        value: all 
    backendRefs:
    - name: coffee-v1
      port: 80
    - name: coffee-v2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /some-valid
      headers:
      - name: version 
        value: all 
    backendRefs:
    - name: coffee-v1
      port: 80
    - name: coffee-not-exist
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /all-invalid
      headers:
      - name: version 
        value: all 
    backendRefs:
    - name: coffee-v1
      kind: invalid
      port: 80
    - name: coffee-not-exist
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v1
      headers:
      - name: version 
        value: all 
    backendRefs:
    - name: coffee-v1
      weight: 100
      port: 80
    - name: coffee-v2
      port: 80
      weight: 0
  - matches:
    - path:
        type: PathPrefix
        value: /v2
      headers:
      - name: version 
        value: all 
    backendRefs:
    - name: coffee-v1
      port: 80
      weight: 0
    - name: coffee-v2
      port: 80
      weight: 100
